Fix input box prefilled answer.

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <p id="description">Please fill out the survey form with the required information</p>
     <form id="survey-form" method="post" action="">
         <div class="form-group">
-            <label id="name-label">Name <input id="name" value="name" placeholder="Enter your name" required> </label>
+            <label id="name-label">Name <input id="name" placeholder="Enter your name" required> </label>
         </div>
         <div class="form-group">
-            <label id="email-label">Email <input id="email" value="email" type="email" placeholder="Enter your email" required>
+            <label id="email-label">Email <input id="email" type="email" placeholder="Enter your email" required>
             </label>
         </div>
         <div class="form-group">
